# scintilla-todo

./: .gitignore  default.nix  moo.cfg  scintilla-todo.cabal
app/: Main.hs
migrations/: pomodoro.txt  todo.txt
src/Todo/: DbTypes.hs  Model.hs
