name:                scintilla-todo
version:             0.1.0.0
synopsis:            Example scintilla app
description:         Please see README.md
homepage:            http://github.com/cdodev/scinitilla-example
license:             BSD3
license-file:        LICENSE
author:              Ben Ford
maintainer:          ben@commandodev.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Todo.DbTypes
                     , Todo.Model
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec >= 0.12.1.5
                     , bytestring >= 0.10.4.0
                     , containers >= 0.5.5.1
                     , either >= 4.3.3.2
                     , errors >= 1.4.7
                     , free
                     , lens
                     , mmorph >= 1.0.4
                     , mtl >= 2.1.3.1
                     , opaleye
                     , opaleye-sot
                     , pipes
                     , pipes-concurrency
                     , postgresql-simple >= 0.5.1.2
                     , scintilla
                     , text >= 1.2.0.4
                     , time >= 1.5.0.1
                     , thyme >= 0.3.5.5
                     , transformers >= 0.4.2.0
                     , unordered-containers >= 0.2.5.1
                     , uuid >= 1.3.9
  default-language:    Haskell2010

executable todo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scintilla-todo
  default-language:    Haskell2010

test-suite scintilla-todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scintilla
                     , scintilla-todo
                     , containers >= 0.5.5.1
                     , mmorph >= 1.0.4
                     , tasty >= 0.10.1
                     , tasty-hspec >= 1.1
                     , tasty-quickcheck >= 0.8.3.2
                     , unordered-containers >= 0.2.5.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
